--- a/web/app.css
+++ b/web/app.css
@@ -144,20 +144,21 @@ nav {
     z-index: 1000;
     user-select: none;
 }
-
 nav > ol.projects {
     padding: 0.5rem 0;
     overflow: auto;
     border-top: 1px solid var(--background);
 }
-
+nav > ol.projects > h2 {
+    padding: 1.25rem 0 0.25rem 0.75rem;
+}
 nav > ol.projects > li.link {
     display: flex;
-    cursor: pointer;
     line-height: 1em;
-    padding: 0.25em 0.5em;
+    white-space: nowrap;
+    padding: 0.25em 1rem 0.25em 1.5rem;
+    cursor: pointer;
 }
-
 nav > ol.projects > li.link > .src {
     display: none;
     margin-left: 1ch;
