--- a/web/app.css
+++ b/web/app.css
@@ -4,7 +4,7 @@
     --font-size: 13px;
     --line-height: 1.2;
     --header-height: 1rem;
-    --sidebar-width: 220px;
+    --sidebar-width: 240px;
 
     --background: #050301;
     --f_high: #cf2b43;
@@ -19,6 +19,15 @@
     --bg: #f0f0f0;
     --fg: #141419;
     --acc: var(--f_med);
+
+    
+}
+
+@media screen and (max-width: 30em) {
+    :root {
+        --font-size: 11px;
+        --line-height: 1.5;
+    }
 }
 
 /** ------- RESET ------- **/
@@ -31,7 +40,7 @@
     box-sizing: border-box;
     list-style: none;
     vertical-align: baseline;
-    color: inherit;
+    /* color: inherit; */
     font-family: inherit;
     font-weight: inherit;
     font-style: inherit;
@@ -52,7 +61,6 @@ body {
     background:var(--background);
     color: var(--f_med);
 }
-
 
 /** ------- FONTS ------- **/
 
@@ -80,13 +88,12 @@ body {
 
 /** ------- ICONS ------- **/
 
-i,
 [class^="ic-"],
 [class*=" ic-"] {
   font-family: 'icon' !important;
   font-size: var(--font-size);
   font-style: normal;
-  font-weight: normal;
+  font-weight: bold;
   font-variant: normal;
   text-transform: none;
   -webkit-font-smoothing: antialiased;
@@ -95,59 +102,60 @@ i,
   height: 1rem; 
   /* line-height: var(--line-height); */
 }
-
-i.github-alt:before { content: "\e907"; }
-i.equalizer:before { content: "\e908"; }
-i.games:before { content: "\e909"; }
-i.loop:before { content: "\e90a"; }
-i.pause:before { content: "\e90b"; }
-i.skip_next:before { content: "\e90c"; }
-i.skip_previous:before { content: "\e90d"; }
-i.stop:before { content: "\e90e"; }
-i.volume_mute:before { content: "\e90f"; }
-i.volume_up:before { content: "\e910"; }
-i.hd:before { content: "\e911"; }
-i.sort_by_alpha:before { content: "\e912"; }
-i.fiber_manual_record:before { content: "\e913"; }
-i.stay_current_portrait:before { content: "\e914"; }
-i.clear:before { content: "\e901"; }
-i.link:before { content: "\e900"; }
-i.sort:before { content: "\e915"; }
-i.font_download:before { content: "\e916"; }
-i.link_off:before { content: "\e917"; }
-i.file_download:before { content: "\e918"; }
-i.folder:before { content: "\e919"; }
-i.computer:before { content: "\e91a"; }
-i.desktop_windows:before { content: "\e91b"; }
-i.keyboard:before { content: "\e91c"; }
-i.phone_android:before { content: "\e91d"; }
-i.tablet_android:before { content: "\e91e"; }
-i.videogame_asset:before { content: "\e91f"; }
-i.camera_alt:before { content: "\e920"; }
-i.grid_off:before { content: "\e921"; }
-i.grid_on:before { content: "\e922"; }
-i.arrow_back:before { content: "\e923"; }
-i.arrow_forward:before { content: "\e924"; }
-i.check:before { content: "\e925"; }
-i.expand_less:before { content: "\e926"; }
-i.expand_more:before { content: "\e927"; }
-i.fullscreen:before { content: "\e905"; }
-i.fullscreen_exit:before { content: "\e906"; }
-i.refresh:before { content: "\e928"; }
-i.android:before { content: "\e929"; }
-i.code:before { content: "\e904"; }
-i.dashboard:before { content: "\e92a"; }
-i.exit_to_app:before { content: "\e902"; }
-i.search:before { content: "\e92b"; }
-i.view_module:before { content: "\e92c"; }
-i.filter_list_alt:before { content: "\e92d"; }
-i.account_tree:before { content: "\e932"; }
-i.dashboard_customize:before { content: "\e92e"; }
-i.file_download_done:before { content: "\e92f"; }
-i.grid_view:before { content: "\e930"; }
-i.close_fullscreen:before { content: "\e903"; }
-i.sensor_window:before { content: "\e931"; }
-
+.ic-github-alt:before { content: "\e907";}
+.ic-equalizer:before { content: "\e908"; }
+.ic-games:before { content: "\e909"; }
+.ic-loop:before { content: "\e90a"; }
+.ic-pause:before { content: "\e90b"; }
+.ic-skip_next:before { content: "\e90c"; }
+.ic-skip_previous:before { content: "\e90d"; }
+.ic-stop:before { content: "\e90e"; }
+.ic-volume_mute:before { content: "\e90f"; }
+.ic-volume_up:before { content: "\e910"; }
+.ic-hd:before { content: "\e911"; }
+.ic-sort_by_alpha:before { content: "\e912"; }
+.ic-fiber_manual_record:before { content: "\e913"; }
+.ic-stay_current_portrait:before { content: "\e914"; }
+.ic-add:before { content: "\e934"; }
+.ic-clear:before { content: "\e901"; }
+.ic-link:before { content: "\e900"; }
+.ic-sort:before { content: "\e915"; }
+.ic-font_download:before { content: "\e916"; }
+.ic-link_off:before { content: "\e917"; }
+.ic-file_download:before { content: "\e918"; }
+.ic-folder:before { content: "\e919"; }
+.ic-computer:before { content: "\e91a"; }
+.ic-desktop_windows:before { content: "\e91b"; }
+.ic-keyboard:before { content: "\e91c"; }
+.ic-phone_android:before { content: "\e91d"; }
+.ic-tablet_android:before { content: "\e91e"; }
+.ic-videogame_asset:before { content: "\e91f"; }
+.ic-camera_alt:before { content: "\e920"; }
+.ic-grid_off:before { content: "\e921"; }
+.ic-grid_on:before { content: "\e922"; }
+.ic-arrow_back:before { content: "\e923"; }
+.ic-arrow_forward:before { content: "\e924"; }
+.ic-check:before { content: "\e925"; }
+.ic-expand_less:before { content: "\e926"; }
+.ic-expand_more:before { content: "\e927"; }
+.ic-fullscreen:before { content: "\e905"; }
+.ic-fullscreen_exit:before { content: "\e906"; }
+.ic-refresh:before { content: "\e928"; }
+.ic-android:before { content: "\e929"; }
+.ic-code:before { content: "\e904"; }
+.ic-dashboard:before { content: "\e92a"; }
+.ic-exit_to_app:before { content: "\e902"; }
+.ic-launch:before { content: "\e933"; }
+.ic-search:before { content: "\e92b"; }
+.ic-view_module:before { content: "\e92c"; }
+.ic-filter_list_alt:before { content: "\e92d"; }
+.ic-account_tree:before { content: "\e932"; }
+.ic-dashboard_customize:before { content: "\e92e"; }
+.ic-file_download_done:before { content: "\e92f"; }
+.ic-grid_view:before { content: "\e930"; }
+.ic-close_fullscreen:before { content: "\e903"; }
+.ic-sensor_window:before { content: "\e931";}
+  
 /** ------- ELEMENTS ------- **/
 
 ::selection {
@@ -161,13 +169,20 @@ i.sensor_window:before { content: "\e931"; }
 
 a {
     background: transparent;
-    /* color: var(--f_med); */
+    color: var(--f_med);
     text-decoration: none;
     border: none;
 }
-a:hover {
-    color: var(--f_high);
+a:hover, a:focus {
+    background: var(--f_med); 
+    color: var(--b_low); 
+    border-radius: 2px;
 }
+/* a:focus {
+    background: var(--f_med);
+    color: var(--b_med);
+}
+*/
 
 h1, h2, h3, h4 {
     font-family: 'title';
@@ -175,21 +190,24 @@ h1, h2, h3, h4 {
     line-height: 1em;
 }
 h1 {
-    font-size: 3em;
+    font-size: 4em;
+    line-height: 1.5em;
 }
 h2 {
     font-size: 2em;
+    line-height: 1em;
 }
 h3 {
     font-size: 1.5em;
+    line-height: 1.5em;
 }
 h4 {
     font-size: 1em;
+    line-height: 2em;
 }
 
 input {
     padding: 1rem;
-    /* font-family: monospace; */
     text-transform: uppercase;
     background: var(--b_low);
     color: var(--f_med);
@@ -201,6 +219,18 @@ input:focus {
     background: var(--b_high);
     color: var(--f_low);
 }
+
+strong {
+    font-weight: bold;
+}
+
+/** ------- CLASSES ------- **/
+
+/* .selected {
+    background: var(--f_low); 
+    color: var(--b_low); 
+    border-radius: 2px;
+} */
 
 /** ------- APP ------- **/
 
@@ -216,8 +246,8 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-image: url('pattern.png');
-    background-color: var(--f_high);
+    /* background-image: url('pattern.png'); */
+    /* background-color: var(--f_high); */
 }
 
 body.armory_examples_browser > header {
@@ -231,6 +261,7 @@ body.armory_examples_browser > nav.sidebar {
     bottom: 0;
     width: var(--sidebar-width);
     height: 100%;
+    /* padding-bottom: 5rem; */
     z-index: 1000;
     background: var(--b_med); 
     color: var(--f_med); 
@@ -240,9 +271,11 @@ body.armory_examples_browser > nav.sidebar {
 body.armory_examples_browser > nav.sidebar.hidden {
     transform: translateX(-100%);
 }
+/* body.armory_examples_browser > nav.sidebar input[type="search"] {
+    box-shadow: 0 4px 10px rgba(0,0,0,1);
+} */
 
 body.armory_examples_browser nav.sidebar section.group {
-    /* margin: 0 0 0 0.5rem; */
     padding: 1rem 0 1rem 0;
 }
 
@@ -255,10 +288,11 @@ body.armory_examples_browser nav.sidebar section.group {
     width: var(--sidebar-width);
     height: 100%;
     overflow-y: scroll;
+    padding: 1rem 0 5rem 0;
+    /* scroll-padding-bottom: 200px; */
 }
 body.armory_examples_browser nav.sidebar section.group .title {
     margin: 0rem 0 0.5rem 0.8rem;
-    /* margin-bottom: 0.5reem; */
 }
 body.armory_examples_browser nav.sidebar li.project {
     display: flex;
@@ -285,17 +319,35 @@ body.armory_examples_browser nav.sidebar li.project.loading {
     color: var(--f_low);
 }
 body.armory_examples_browser nav.sidebar li.project.playing {
-    background: var(--b_inv);
-    color: var(--f_inv);
+    background: var(--f_inv);
+    color: var(--b_med);
 }
-body.armory_examples_browser nav.sidebar li.project i.clear {
+/* body.armory_examples_browser nav.sidebar li.project .ic-clear {
     display: none;
     margin-right: 0.25ch;
     cursor: pointer;
 }
-body.armory_examples_browser nav.sidebar li.project.playing i.clear {
+body.armory_examples_browser nav.sidebar li.project.playing .ic-clear {
     display: inline-block;
+} */
+
+body.armory_examples_browser nav.sidebar li.project .controls {
+    display: none;
 }
+body.armory_examples_browser nav.sidebar li.project .controls > * {
+    margin-left: 0.25ch;
+}
+body.armory_examples_browser nav.sidebar li.project.playing .controls {
+    display: flex;
+}
+
+/* body.armory_examples_browser nav.sidebar li.project .ic-code {
+    display: none;
+    margin-left: 0.5ch;
+}
+body.armory_examples_browser nav.sidebar li.project:hover .ic-code {
+    display: inline-block;
+} */
 
 body.armory_examples_browser > main {
     position: fixed;
@@ -311,7 +363,9 @@ body.armory_examples_browser > main {
 body.armory_examples_browser > main iframe.project {
     width: 100vw;
     height: 100vh;
-    background: var(--b_med);
+    /* background: var(--b_med); */
+    /* background-image: url('pattern.png');
+    background-color:#fff; */
 }
 body.armory_examples_browser > main .controls {
     width: 100%;
@@ -334,6 +388,10 @@ body.armory_examples_browser > main .readme:empty {
     display: none;
 }
 
+footer {
+    display: none;
+}
+
 /** ------- MARKDOWN ------- **/
 
 .markdown {
@@ -341,26 +399,35 @@ body.armory_examples_browser > main .readme:empty {
     background: var(--b_med);
 }
 .markdown a {
-   color: var(--f_high);
+    color: var(--f_med) !important;
+    /* border-bottom: 1px solid var(--f_med); */
+    /*
+    color: var(--f_med); */
 }
 .markdown a:hover {
-    text-decoration: underline;
+    color: var(--f_high) !important;
+    background: none;
+    border-bottom: 1px solid var(--f_high);
 }
 .markdown a:visited {
    color: var(--f_low);
 }
-.markdown a:hover {
+/* .markdown a:hover {
    border-bottom: 3px solid var(--f_med);
 }
+.markdown a[href]:hover {
+    border-bottom: 1px dotted var(--fg);
+} */
+/* &[href][class^="ic-"] { */
+    
 .markdown hr {
-   color: red;
-   border: 0;
+    border: 0;
     margin: 0.5rem 0 0.75rem 0;
     height: 1px;
     background: var(--f_med);
 }
 .markdown p {
-    margin-bottom: var(--line-height);
+    margin-bottom: 1rem; 
 }
 .markdown ol,
 .markdown ul {
@@ -381,7 +448,3 @@ body.armory_examples_browser > main .readme:empty {
     background: var(--b_low);
     color: var(--f_inv);
 }
-.markdown a[href]:hover {
-    border-bottom: 1px dotted var(--fg);
-}
-/* &[href][class^="ic-"] { */
