--- a/web/app.css
+++ b/web/app.css
@@ -8,7 +8,7 @@
 
     --background: #050301;
     --f_high: #cf2b43;
-    --f_med: #a0a0a0;
+    --f_med: #b0b0b0;
     --f_low: #606060;
     --f_inv: #ffffff;
     --b_high: #ffffff;
@@ -97,8 +97,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 1rem; 
-  height: 1rem; 
+  height: 1rem;
   /* line-height: var(--line-height); */
+  user-select: none;
 }
 .ic-github-alt:before { content: "\e907";}
 .ic-equalizer:before { content: "\e908"; }
@@ -154,6 +155,20 @@ body {
 .ic-close_fullscreen:before { content: "\e903"; }
 .ic-sensor_window:before { content: "\e931";}
   
+/** ------- SCROLLBAR ------- **/
+
+::-webkit-scrollbar { border: none; }
+::-webkit-scrollbar:horizontal {
+    display: none;
+}
+::-webkit-scrollbar:vertical {
+    border: none;
+    width: 2px;
+}
+::-webkit-scrollbar-thumb {
+    background:  var(--f_low);
+}
+
 /** ------- ELEMENTS ------- **/
 
 ::selection {
@@ -161,9 +176,9 @@ body {
     color: var(--f_inv);
 }
 
-::-webkit-scrollbar { border: none; }
+/* ::-webkit-scrollbar { border: none; }
 ::-webkit-scrollbar:horizontal { display: none; }
-::-webkit-scrollbar:vertical { width: 1px; }
+::-webkit-scrollbar:vertical { width: 1px; } */
 
 a {
     background: transparent;
@@ -253,7 +268,6 @@ body.armory_examples_browser > header {
     /* position: fixed;
     top: 0;
     left: var(--sidebar-width); */
-
 }
 
 body.armory_examples_browser > nav.sidebar {
@@ -276,6 +290,10 @@ body.armory_examples_browser > nav.sidebar.hidden {
 /* body.armory_examples_browser > nav.sidebar input[type="search"] {
     box-shadow: 0 4px 10px rgba(0,0,0,1);
 } */
+
+body.armory_examples_browser > nav.sidebar img {
+    width: 100%;
+}
 
 body.armory_examples_browser nav.sidebar section.group {
     padding: 1rem 0 1rem 0;
